update post rec
