# docs/swagger.json
@@ -252,6 +252,11 @@
                     ],
                     "example": "work"
                   },
+                  "isFavourite": {
+                    "type": "boolean",
+                    "description": "Mark the contact as a favourite",
+                    "example": true
+                  },
                   "photo": {
                     "type": "string",
                     "format": "binary",
